change: add common ports proxy mode for redir-host

--- a/luci-app-openclash/po/zh-cn/openclash.zh-cn.po
+++ b/luci-app-openclash/po/zh-cn/openclash.zh-cn.po
@@ -1020,8 +1020,14 @@ msgstr "在Fake-IP模式下，只支持过滤纯IP类型的请求"
 msgid "Rule Match Proxy Mode"
 msgstr "*仅代理命中规则流量"
 
-msgid "Only Proxy Rules Match, Prevent BT Passing"
-msgstr "仅允许代理命中规则的流量，防止BT下载流量经过代理"
+msgid "Only Proxy Rules Match, Prevent BT/P2P Passing"
+msgstr "仅允许代理命中规则的流量，防止BT、P2P下载流量经过代理"
+
+msgid "Common Ports Proxy Mode"
+msgstr "*仅允许常用端口流量"
+
+msgid "Only Common Ports, Prevent BT/P2P Passing"
+msgstr "仅允许常用端口的流量经过Clash，防止BT、P2P下载流量经过代理"
 
 msgid "Provider File Manage"
 msgstr "代理（规则）集文件管理"
