--- a/luci-app-openclash/po/zh-cn/openclash.zh-cn.po
+++ b/luci-app-openclash/po/zh-cn/openclash.zh-cn.po
@@ -972,6 +972,12 @@ msgstr "启用时服务器必须支持UDP转发"
 msgid "If Docker is Installed, UDP May Not Forward Normally"
 msgstr "安装了Docker的固件可能无法正常转发UDP"
 
+msgid "Disable quic"
+msgstr "*禁用quic"
+
+msgid "Disable yt fb ig use quic"
+msgstr "改善yt fb等走quic水土不服问题"
+
 msgid "Operation Mode"
 msgstr "模式设置"
 
