--- a/luci-app-openclash/po/zh-cn/openclash.zh-cn.po
+++ b/luci-app-openclash/po/zh-cn/openclash.zh-cn.po
@@ -1509,3 +1509,465 @@ msgstr "成功复制SSR网址到剪贴板。"
 
 msgid "Exclude Keyword Match Default"
 msgstr "排除无效节点"
+
+msgid "Start Downloading"
+msgstr "开始下载"
+
+msgid "Download Successful, Start Pre Update Test..."
+msgstr "下载成功，开始进行更新前测试..."
+
+msgid "Pre Update Test Failed, The File is Saved in /tmp/opencrash.ipk, Please Try to Update Manually!"
+msgstr "更新前测试失败，文件保存在/tmp/openclash.ipk，请尝试手动更新！"
+
+msgid "Pre Update Test Passed, Ready to Update and Please Do not Refresh The Page and Other Operations..."
+msgstr "更新前测试通过，准备开始更新，更新过程请不要刷新页面和进行其他操作..."
+
+msgid "Uninstalling The Old Version, Please Do not Refresh The Page or Do Other Operations..."
+msgstr "正在卸载旧版本，更新过程请不要刷新页面和进行其他操作..."
+
+msgid "Installing The New Version, Please Do Not Refresh The Page or Do Other Operations..."
+msgstr "正在安装新版本，更新过程请不要刷新页面和进行其他操作..."
+
+msgid "OpenClash Update Successful, About To Restart!"
+msgstr "OpenClash 更新成功，即将进行重启！"
+
+msgid "OpenClash Update Failed, The File is Saved in /tmp/openclash.ipk, Please Try to Update Manually!"
+msgstr "OpenClash 更新失败，文件保存在/tmp/openclash.ipk，请尝试手动更新！"
+
+msgid "Download Failed, Please Check The Network or Try Again Later!"
+msgstr "下载失败，请检查网络或稍后再试！"
+
+msgid "Failed to Get Version Information, Please Try Again Later..."
+msgstr "获取版本信息失败，请稍后再试..."
+
+msgid "OpenClash Has not Been Updated, Stop Continuing!"
+msgstr "OpenClash 没有更新，停止继续操作！"
+
+msgid "Core Version Check Error, Please Try Again Later..."
+msgstr "内核最新版本检测失败，请稍后再试..."
+
+msgid "Core Downloading, Please Try to Download and Upload Manually If Fails"
+msgstr "版本内核正在下载，如下载失败请尝试手动下载并上传..."
+
+msgid "Core Download Successful, Start Update..."
+msgstr "版本内核下载成功，开始更新..."
+
+msgid "Core Update Failed, Please Check The Network or Try Again Later!"
+msgstr "版本内核更新失败，请检查网络或稍后再试！"
+
+msgid "Core Update Successful!"
+msgstr "版本内核更新成功！"
+
+msgid "Core Update Failed. Please Make Sure Enough Flash Memory Space And Try Again!"
+msgstr "版本内核更新失败，请确认设备闪存空间足够后再试！"
+
+msgid "No Compiled Version Selected, Please Select In Global Settings And Try Again!"
+msgstr "未选择编译版本，请到全局设置中选择后再试！"
+
+msgid "Core Has Not Been Updated, Stop Continuing Operation!"
+msgstr "版本内核没有更新，停止继续操作！"
+
+msgid "Start Downloading Third Party Rules in Use..."
+msgstr "开始下载使用中的第三方规则..."
+
+msgid "Warrning: Multiple Other-Rules-Configurations Enabled, Ignore..."
+msgstr "警告：检测到启用了多个第三方规则配置，忽略后续配置..."
+
+msgid "Download Successful, Start Preprocessing Rule File..."
+msgstr "下载成功，开始预处理规则文件..."
+
+msgid "Error: Ruby Works Abnormally, Please Check The Ruby Library Depends!"
+msgstr "错误：Ruby依赖异常，无法校验配置文件，请确认ruby依赖工作正常后重试！"
+
+msgid "Error:"
+msgstr "错误："
+
+msgid "Rule File Format Validation Failed, Please Try Again Later..."
+msgstr "规则文件格式校验失败，请稍后再试..."
+
+msgid "Error: Updated Others Rules"
+msgstr "错误：更新的第三方规则文件"
+
+msgid "Has No Rules Field, Update Exit..."
+msgstr "规则部分校验失败，请稍后再试..."
+
+msgid "Has Incompatible Proxy-Group, Update Exit, Please Wait For OpenClash Update To Adapt..."
+msgstr "含有未支持的新策略组，更新停止，请等待OpenClash版本更新适配..."
+
+msgid "Check The Downloaded Rule File For Updates..."
+msgstr "检查下载的规则文件是否有更新..."
+
+msgid "Detected that The Downloaded Rule File Has Been Updated, Starting To Replace..."
+msgstr "检测到下载的规则文件有更新，开始替换..."
+
+msgid "Other Rules"
+msgstr "第三方规则文件"
+
+msgid "Update Successful!"
+msgstr "更新成功！"
+
+msgid "Updated Other Rules"
+msgstr "检测到更新的规则文件"
+
+msgid "No Change, Do Nothing!"
+msgstr "没有更新，停止继续操作!"
+
+msgid "Update Error, Please Try Again Later..."
+msgstr "下载失败，请检查网络或稍后再试..."
+
+msgid "Other Rules Not Enable, Update Stop!"
+msgstr "未启用第三方规则，更新程序终止！"
+
+msgid "Get Other Rules Settings Faild, Update Stop!"
+msgstr "未找到第三方规则配置，更新程序终止！"
+
+msgid "is Replaced Successfully, Start Picking Nodes..."
+msgstr "替换成功，检测到已启用节点筛选，开始挑选节点..."
+
+msgid "is Replaced Successfully, Start to Reserving..."
+msgstr "替换成功，检测到已启用保留配置，开始进行设置..."
+
+msgid "配置文件下载成功，检查是否有更新..."
+msgstr "Config File Download Successful, Check If There is Any Update"
+
+msgid "Are Updates, Start Replacing..."
+msgstr "有更新，开始替换..."
+
+msgid "Download Successful, Start To Create..."
+msgstr "下载成功，本地没有配置文件，开始创建..."
+
+msgid "Error: Ruby Works Abnormally, Please Check The Ruby Library Depends!"
+msgstr "错误：Ruby依赖异常，无法校验配置文件，请确认ruby依赖工作正常后重试！"
+
+msgid "Config File Format Validation Failed..."
+msgstr "配置文件格式校验失败..."
+
+msgid "Error: Updated Config"
+msgstr "错误：更新的配置文件"
+
+msgid "Has No Proxy Field, Update Exit..."
+msgstr "节点部分校验失败..."
+
+msgid "Start Updating Config File"
+msgstr "开始更新配置文件"
+
+msgid "Config File Format Validation Failed, Trying To Download Without Agent..."
+msgstr "配置文件格式校验失败，尝试不使用代理下载配置文件..."
+
+msgid "Has No Proxy Field, Trying To Download Without Agent..."
+msgstr "节点部分校验失败，尝试不使用代理下载配置文件..."
+
+msgid "Error: Config File"
+msgstr "错误：配置文件"
+
+msgid "Subscribed Failed, Trying to Download Without Agent..."
+msgstr "订阅失败，尝试不使用代理下载配置文件..."
+
+msgid "Start Downloading The Chnroute Cidr List..."
+msgstr "开始下载大陆IP白名单..."
+
+msgid "Chnroute Cidr List Download Success, Check Updated..."
+msgstr "大陆IP白名单下载成功，检查版本是否更新..."
+
+msgid "Chnroute Cidr List Has Been Updated, Starting To Replace The Old Version..."
+msgstr "大陆IP白名单有更新，开始替换旧版本..."
+
+msgid "Chnroute Cidr List Update Successful!"
+msgstr "大陆IP白名单更新成功！"
+
+msgid "Updated Chnroute Cidr List No Change, Do Nothing..."
+msgstr "大陆IP白名单没有更新，停止继续操作..."
+
+msgid "Chnroute Cidr List Update Error, Please Try Again Later..."
+msgstr "大陆IP白名单下载失败，请检查网络或稍后再试..."
+
+msgid "Start Downloading Geoip Database..."
+msgstr "开始下载 GEOIP 数据库..."
+
+msgid "Geoip Database Download Success, Check Updated..."
+msgstr "GEOIP 数据库下载成功，检查数据库版本是否更新..."
+
+msgid "Geoip Database Has Been Updated, Starting To Replace The Old Version..."
+msgstr "GEOIP 数据库版本有更新，开始替换数据库版本..."
+
+msgid "Geoip Database Update Successful!"
+msgstr "GEOIP 数据库更新成功！"
+
+msgid "Updated Geoip Database No Change, Do Nothing..."
+msgstr "数据库版本没有更新，停止继续操作..."
+
+msgid "Geoip Database Update Error, Please Try Again Later..."
+msgstr "GEOIP 数据库下载失败，请检查网络或稍后再试..."
+
+msgid "Start Getting"
+msgstr "开始获取"
+
+msgid "Groups Setting..."
+msgstr "的策略组配置..."
+
+msgid "Group Setting..."
+msgstr "的策略组配置..."
+
+msgid "Proxy-providers Setting..."
+msgstr "的代理集配置..."
+
+msgid "Proxy-provider Setting..."
+msgstr "的代理集配置..."
+
+msgid "Proxies Setting..."
+msgstr "的服务器节点配置..."
+
+msgid "Proxy Setting..."
+msgstr "的服务器节点配置..."
+
+msgid "Read Error, Config File"
+msgstr "读取错误，配置文件"
+
+msgid "Abnormal!"
+msgstr "异常！"
+
+msgid "Abnormal!"
+msgstr "异常！"
+
+msgid "Deleting Old Configuration..."
+msgstr "正在删除旧配置..."
+
+msgid "Error: Unable To Parse Config File, Please Check And Try Again!"
+msgstr "配置文件校验失败，请检查配置文件后重试！"
+
+msgid "Start Writing"
+msgstr "开始写入"
+
+msgid "Group To Config File..."
+msgstr "策略组到配置文件..."
+
+msgid "Proxy To Config File..."
+msgstr "策略组到配置文件..."
+
+msgid "Proxy-provider To Config File..."
+msgstr "代理集到配置文件..."
+
+msgid "Unable To Parse, Please Choose One-key Function To Create Config File..."
+msgstr "的信息读取失败，无法进行修改，请选择一键创建配置文件..."
+
+msgid "Setting Secondary DNS Server List..."
+msgstr "正在设置第二DNS服务器列表..."
+
+msgid "Setting Fake IP Filter..."
+msgstr "正在设置Fake-IP黑名单..."
+
+msgid "Deleting"
+msgstr "删除"
+
+msgid "Proxy-providers That no Longer Exists in Subscription"
+msgstr "订阅中已不存在的代理集..."
+
+msgid "Proxies That no Longer Exists in Subscription"
+msgstr "订阅中已不存在的代理集..."
+
+msgid "Read Successful!"
+msgstr "读取完成！"
+
+msgid "Write Successful!"
+msgstr "读取完成！"
+
+msgid "Creating By Using Connershua (rule set) Rules..."
+msgstr "使用ConnersHua(规则集)规则创建中..."
+
+msgid "Creating By Using lhie1 Rules..."
+msgstr "使用lhie1规则创建中..."
+
+msgid "Creating By Using ConnersHua Return Rules..."
+msgstr "使用ConnersHua回国规则创建中..."
+
+msgid "Created Successful, Updating Proxies, Proxy-providers, Groups..."
+msgstr "创建完成，正在更新服务器、代理集、策略组信息..."
+
+msgid "Proxies, Proxy-providers, Groups Edited Successful, Updating Config File"
+msgstr "服务器、代理集、策略组信息修改完成，正在更新配置文件"
+
+msgid "Warning: Because of The Different Porxy-Group's Name, Stop Setting The Other Rules!"
+msgstr "警告：由于第三方规则设置中的策略组名称与配置文件中的不符或不存在，停止继续设置第三方规则！"
+
+msgid "Error: Missing Porxy-Group's Name, Stop Setting The Other Rules!"
+msgstr "错误：丢失或未指定第三方规则中的部分策略组，停止继续设置第三方规则！"
+
+msgid "Detected That The nameserver DNS Option Has No Server Set, Starting To Complete..."
+msgstr "检测到DNS选项下的Nameserver未设置服务器，开始补全..."
+
+msgid "Error: Failed To Download Proxy-providers, Please Check The Log Page For Detailed error information!"
+msgstr "错误: 代理集文件下载失败，请到日志页面查看详细错误信息！"
+
+msgid "Error: Failed To Download Rule-providers, Please Check The Log Page For Detailed error information!"
+msgstr "错误: 规则集文件下载失败，请到日志页面查看详细错误信息！"
+
+msgid "Warning: Providers File Check Timeout, If Failed To start, Please Check The Log Page For Detailed error information!"
+msgstr "警告: 代理集文件检查超时，如启动失败请到日志页面查看详细信息！"
+
+msgid "Error: Nameserver Option Must Be Setted, Stop Customing DNS Servers"
+msgstr "错误: 配置文件DNS选项下的Nameserver必须设置服务器，已停止设置自定义DNS服务器！"
+
+msgid "Config File Does Not Exist, You Have Set Subscription Information, Ready To Download..."
+msgstr "配置文件不存在，您已设置订阅信息，准备开始下载..."
+
+msgid "Error: Config Not Found"
+msgstr "错误: 缺少配置文件，请上传或更新配置文件！"
+
+msgid "Error: Config File Format Validation Failed..."
+msgstr "错误：配置文件格式校验失败..."
+
+msgid "Detected The Exclusive Function of The TUN Core, Use TUN Core to Start..."
+msgstr "检测到配置了 TUN 内核专属功能，调用 TUN 内核启动..."
+
+msgid "Detected The Exclusive Function of The Game Core, Use Game Core to Start..."
+msgstr "检测到配置了 Game 内核专属功能，调用 Game 内核启动..."
+
+msgid "No Special Configuration Detected, Use Dev Core to Start..."
+msgstr "未检测到特殊配置，调用 Dev 内核启动..."
+
+msgid "Detect that the Dev Core is not Installed, Use TUN Core to Start..."
+msgstr "检测到 Dev 内核未安装，调用 TUN 内核启动..."
+
+msgid "Detect that the Dev Core is not Installed, Use Game Core to Start..."
+msgstr "检测到 Dev 内核未安装，调用 Game 内核启动..."
+
+msgid "Detect that the Dev Core is not Installed, Use Game Core to Start..."
+msgstr "检测到 Dev 内核未安装，调用 Game 内核启动..."
+
+msgid "Detect that the GEOIP Database is not Installed, Ready to Download..."
+msgstr "检测到GEOIP数据库文件不存在，准备开始下载..."
+
+msgid "Detect that the Core is not Installed, Ready to Download..."
+msgstr "检测到内核文件不存在，准备开始下载..."
+
+msgid "Detect that the Chnroute Cidr List is not Installed, Ready to Download..."
+msgstr "检测到大陆白名单列表不存在，准备开始下载..."
+
+msgid "Error: Could Not Load The Capsh Library, Please Verify The Capsh Shell Library Work Well..."
+msgstr "错误：Capsh异常，请尝试重新安装依赖【libcap】和相应的Capsh库，终止启动..."
+
+msgid "Tip: You Could Download And Re-Install The libcap & libcap-bin Library From The Address Give"
+msgstr "Tip: 你可以尝试从给出的地址中查找、下载并重新安装架构对应的 libcap 和 libcap-bin 依赖"
+
+msgid "Error: Get DNS 'listen' Option Error, OpenClash Can Not Start With Raw Config File"
+msgstr "错误: 无法获取DNS部分的监听端口设置, OpenClash 使用原始配置文件启动失败"
+
+msgid "Error: Get DNS 'enhanced-mode' Option Error, OpenClash Can Not Start With Raw Config File"
+msgstr "错误: 无法获取DNS部分的运行模式设置, OpenClash 使用原始配置文件启动失败"
+
+msgid "Error: Get General 'redir-port' Option Error, OpenClash Can Not Start With Raw Config File"
+msgstr "错误: 无法获取General部分的转发端口设置, OpenClash 使用原始配置文件启动失败"
+
+msgid "Error: OpenClash Can Not Start, Please Check The Error Info And Try Again!"
+msgstr "错误: OpenClash 启动失败，请到日志页面查看详细错误信息！"
+
+msgid "Error: OpenClash Can Not Start, Try Use Raw Config Restart Again..."
+msgstr "错误: OpenClash 启动失败，尝试使用原始配置文件启动..."
+
+msgid "Error: OpenClash Can Not Start, Try Use Backup Rules Start Again..."
+msgstr "错误: OpenClash 启动失败，尝试还原第三方规则并重新启动 Clash 主程序..."
+
+msgid "Found 53 Port Hijacked, Clean Up Firewall Rules..."
+msgstr "发现53端口被劫持，清理防火墙规则..."
+
+msgid "OpenClash Start Running..."
+msgstr "OpenClash 开始启动..."
+
+msgid "Step 1: Get The Configuration..."
+msgstr "第一步: 获取配置..."
+
+msgid "Step 2: Check The Components..."
+msgstr "第二步: 组件运行前检查..."
+
+msgid "Step 3: Modify The Config File..."
+msgstr "第三步: 修改配置文件..."
+
+msgid "Step 4: Start Running The Clash Core..."
+msgstr "第四步: 启动主程序..."
+
+msgid "Step 5: Check The Core Status..."
+msgstr "第五步: 检查内核启动状态..."
+
+msgid "Step 6: Wait For The File Downloading..."
+msgstr "第六步: 等待主程序下载外部文件..."
+
+msgid "Step 7: Set Control Panel..."
+msgstr "第七步: 设置控制面板..."
+
+msgid "Step 8: Set Firewall Rules..."
+msgstr "第八步: 设置防火墙规则..."
+
+msgid "Step 9: Restart Dnsmasq..."
+msgstr "第九步: 重启 Dnsmasq 程序..."
+
+msgid "Step 10: Add Cron Rules, Start Daemons..."
+msgstr "第十步: 添加计划任务,启动进程守护程序..."
+
+msgid "OpenClash Start Successful!"
+msgstr "OpenClash 启动成功，请等待服务器上线！"
+
+msgid "Warning: OpenClash Start Successful, Please Note That Network May Abnormal With IPV6's DHCP Server"
+msgstr "警告：OpenClash 启动成功，检测到您启用了IPV6的DHCP服务，可能会造成连接异常！"
+
+msgid "Warning: OpenClash Start Successful With Raw Config File, Please Note That It's Restricted Mode Now"
+msgstr "警告：OpenClash 使用原始配置文件启动成功，部分设置可能未生效！"
+
+msgid "OpenClash Stoping..."
+msgstr "OpenClash 开始关闭..."
+
+msgid "Step 1: Backup The Current Groups State..."
+msgstr "第一步: 备份当前策略组状态..."
+
+msgid "Step 2: Delete OpenClash Firewall Rules..."
+msgstr "第二步: 删除 OpenClash 防火墙规则..."
+
+msgid "Step 3: Close The OpenClash Daemons..."
+msgstr "第三步: 关闭 OpenClash 守护程序..."
+
+msgid "Step 4: Close The Clash Core Process..."
+msgstr "第四步: 关闭 Clash 主程序..."
+
+msgid "Step 5: Restart Dnsmasq..."
+msgstr "第五步: 重启 Dnsmasq 程序..."
+
+msgid "Step 6: Delete OpenClash Residue File..."
+msgstr "第六步：删除 OpenClash 残留文件..."
+
+msgid "OpenClash Already Stop!"
+msgstr "OpenClash 关闭成功！"
+
+msgid "Reload OpenClash Firewall Rules..."
+msgstr "重置 OpenClash 防火墙规则..."
+
+msgid "Warning: OpenClash Now Disabled, Need Start From Luci Page, Exit..."
+msgstr "警告：OpenClash 目前处于未启用状态，请从插件页面启动本插件，脚本退出..."
+
+msgid "Warning: Multiple Restart Scripts Running, Exit..."
+msgstr "警告：多个 OpenClash 启动脚本运行中，此脚本退出..."
+
+msgid "Watchdog: Multiple Clash Processes, Kill All..."
+msgstr "守护程序：检测到多个 Clash 内核运行，清理中..."
+
+msgid "Watchdog: Clash Core Problem, Restart..."
+msgstr "守护程序：检测到 Clash 内核崩溃，重启中..."
+
+msgid "Watchdog: Already Restart 3 Times With Clash Core Problem, Auto-Exit..."
+msgstr "守护程序：已尝试自动重启三次 Clash 内核，为防止频繁重启造成严重后果，OpenClash 将停止运行..."
+
+msgid "Watchdog: Log Size Limit, Clean Up All Log Records..."
+msgstr "守护程序：因日志大小限制，清理所有日志内容..."
+
+msgid "Watchdog: Reset Firewall For Enabling Redirect..."
+msgstr "守护程序：检测到转发规则顺序错误，重置插件防火墙规则..."
+
+msgid "Watchdog: Force Reset DNS Hijack..."
+msgstr "守护程序：重新设置 Dnsmasq 的 DNS 转发选项..."
+
+msgid "Rule File"
+msgstr "规则文件"
+
+msgid "Download Error!"
+msgstr "下载失败！"
+
+msgid "Download Successful!"
+msgstr "下载成功！"
