chore: update CodeMirror

--- a/luci-app-openclash/po/zh-cn/openclash.zh-cn.po
+++ b/luci-app-openclash/po/zh-cn/openclash.zh-cn.po
@@ -336,6 +336,9 @@ msgstr "代理集文件列表"
 msgid "Rule Providers File List"
 msgstr "规则集文件列表"
 
+msgid "Game Rules File List"
+msgstr "游戏规则文件列表"
+
 msgid "Please Make Sure Ports Available"
 msgstr "请确保端口可用"
 
