--- a/luci-app-openclash/po/zh-cn/openclash.zh-cn.po
+++ b/luci-app-openclash/po/zh-cn/openclash.zh-cn.po
@@ -2387,9 +2387,6 @@ msgstr "内核日志"
 msgid "Append Upstream DNS"
 msgstr "追加上游DNS"
 
-msgid "Append The Upstream Assigned DNS To The Nameserver"
-msgstr "将上游分配的DNS追加到Nameserver"
-
-msgid "Append The Upstream Assigned DNS To The Nameserver"
-msgstr "将上游分配的DNS追加到Nameserver"
+msgid "Append The Upstream Assigned DNS And Gateway IP To The Nameserver"
+msgstr "将上游分配的DNS和网关IP追加到Nameserver"
 
