--- a/luci-app-openclash/po/zh-cn/openclash.zh-cn.po
+++ b/luci-app-openclash/po/zh-cn/openclash.zh-cn.po
@@ -2300,6 +2300,9 @@ msgstr "错误：策略组解析失败，"
 msgid "Error: Set default-nameserver Error,"
 msgstr "错误：修改default-nameserver配置失败，"
 
+msgid "Error: Netflix IP Rules Complete Error,"
+msgstr "错误：Netflix IP 规则补全失败，"
+
 msgid "switching succeeded!"
 msgstr "切换成功！"
 
@@ -2392,3 +2395,21 @@ msgstr "提示: 由于文件"
 
 msgid "modificated, Pause quick start..."
 msgstr "被修改，暂停快速启动..."
+
+msgid "Click to Update"
+msgstr "点击更新规则"
+
+msgid "Completion Netflix IP Rules"
+msgstr "实验性：补全 Netflix IP 规则"
+
+msgid "Prevent Some Devices From Directly Using IP Access To Cause Unlocking Failure"
+msgstr "防止部分设备直接使用IP访问导致解锁失败"
+
+msgid "Netflix Proxy Group Filter"
+msgstr "Netflix 策略组自动匹配"
+
+msgid "Set Keywords To Find Netflix Group, No Case Sensitive"
+msgstr "设置关键字以自动匹配 Netflix 的策略组，不区分大小写"
+
+msgid "Update Netflix IP Rules"
+msgstr "更新 Netflix IP 规则"
