--- a/luci-app-openclash/po/zh-cn/openclash.zh-cn.po
+++ b/luci-app-openclash/po/zh-cn/openclash.zh-cn.po
@@ -2648,5 +2648,5 @@ msgstr "旁路网关（旁路由）兼容"
 msgid "If The Ntwork Cannot be Connected in Bypass Gateway Mode, Please Try to Enable."
 msgstr "旁路网关（旁路由）模式下网络无法连接时请尝试启用。"
 
-msgid "Suggestion: If The Device Does Not Have Wifi, Please Disable The Lan Interface's Bridge Option"
-msgstr "建议：如果设备没有Wifi，请取消Lan接口的桥接接口选项"
+msgid "Suggestion: If The Device Does Not Have WLAN, Please Disable The Lan Interface's Bridge Option"
+msgstr "建议：如果设备没有WLAN，请禁用Lan接口的桥接接口选项"
