chore: add Discovery Plus & DAZN support for other rules by lhie1

--- a/luci-app-openclash/po/zh-cn/openclash.zh-cn.po
+++ b/luci-app-openclash/po/zh-cn/openclash.zh-cn.po
@@ -2504,8 +2504,8 @@ msgstr "提示：开始自动选择（检测）TVB Anywhere+ 解锁节点..."
 msgid "Tip: Start Auto Select Proxy For Amazon Prime Video Unlock..."
 msgstr "提示：开始自动选择（检测）Amazon Prime Video 解锁节点..."
 
-msgid "Tip: Start Auto Select Proxy For Dazn Unlock..."
-msgstr "提示：开始自动选择（检测）Dazn 解锁节点..."
+msgid "Tip: Start Auto Select Proxy For DAZN Unlock..."
+msgstr "提示：开始自动选择（检测）DAZN 解锁节点..."
 
 msgid "Tip: Start Auto Select Proxy For Paramount Plus Unlock..."
 msgstr "提示：开始自动选择（检测）Paramount Plus 解锁节点..."
@@ -2537,8 +2537,8 @@ msgstr "Amazon Prime Video 策略组："
 msgid "YouTube Premium Group:"
 msgstr "YouTube Premium 策略组："
 
-msgid "Dazn Group:"
-msgstr "Dazn 策略组："
+msgid "DAZN Group:"
+msgstr "DAZN 策略组："
 
 msgid "Paramount Plus Group:"
 msgstr "Paramount Plus 策略组："
