--- a/luci-app-openclash/po/zh-cn/openclash.zh-cn.po
+++ b/luci-app-openclash/po/zh-cn/openclash.zh-cn.po
@@ -35,8 +35,8 @@ msgstr "自定义规则集与策略组管理（仅TUN内核）"
 msgid "General Settings"
 msgstr "常规设置"
 
-msgid "DNS Setting"
-msgstr "DNS设置"
+msgid "DNS Settings"
+msgstr "DNS 设置"
 
 msgid "Config Update"
 msgstr "配置文件订阅"
@@ -1766,6 +1766,24 @@ msgstr "GeoSite 数据库版本没有更新，停止继续操作..."
 msgid "GeoSite Database Update Error, Please Try Again Later..."
 msgstr "GeoSite 数据库下载失败，请检查网络或稍后再试..."
 
+msgid "Start Downloading GeoIP Dat..."
+msgstr "开始下载 GeoIP Dat 数据库..."
+
+msgid "GeoIP Dat Download Success, Check Updated..."
+msgstr "GeoIP Dat 数据库下载成功，检查数据库版本是否更新..."
+
+msgid "GeoIP Dat Has Been Updated, Starting To Replace The Old Version..."
+msgstr "GeoIP Dat 数据库版本有更新，开始替换数据库版本..."
+
+msgid "GeoIP Dat Update Successful!"
+msgstr "GeoIP Dat 数据库更新成功！"
+
+msgid "Updated GeoIP Dat No Change, Do Nothing..."
+msgstr "GeoIP Dat 数据库版本没有更新，停止继续操作..."
+
+msgid "GeoIP Dat Update Error, Please Try Again Later..."
+msgstr "GeoIP Dat 数据库下载失败，请检查网络或稍后再试..."
+
 msgid "Start Downloading Geoip Database..."
 msgstr "开始下载 GEOIP 数据库..."
 
@@ -1918,6 +1936,9 @@ msgstr "提示: 检测到 GEOIP 数据库文件不存在，准备开始下载...
 
 msgid "Tip: Detected that the GEOSITE Database is not Installed, Ready to Download..."
 msgstr "提示: 检测到 GEOSITE 数据库文件不存在，准备开始下载..."
+
+msgid "Tip: Detected that the GEOIP Dat is not Installed, Ready to Download..."
+msgstr "提示: 检测到 GEOIP Dat 数据库文件不存在，准备开始下载..."
 
 msgid "Tip: Detected that the Core is not Installed, Ready to Download..."
 msgstr "提示: 检测到内核文件不存在，准备开始下载..."
@@ -2426,8 +2447,8 @@ msgstr "点击更新规则"
 msgid "Prefetch Netflix, Disney Plus Domains"
 msgstr "实验性：预解析 Netflix、Disney Plus 域名"
 
-msgid "Prevent Some Devices From Directly Using IP Access To Cause Unlocking Failure"
-msgstr "防止部分设备直接使用IP访问导致DNS解锁失败"
+msgid "Prevent Some Devices From Directly Using IP Access To Cause Unlocking Failure, Recommend Use meta Sniffer Function"
+msgstr "防止部分设备直接使用IP访问导致DNS解锁失败，建议使用 meta 内核的探测功能"
 
 msgid "Update Preset Domains List"
 msgstr "更新预置域名列表"
@@ -2824,3 +2845,33 @@ msgstr "启用后将尽可能的覆盖DNS查询到的域名"
 
 msgid "(Support Vless By Pinyun)"
 msgstr "(由品云提供，支持 Vless)"
+
+msgid "Meta Settings"
+msgstr "Meta 设置"
+
+msgid "Geodata Loader Mode"
+msgstr "Geodata 数据加载方式"
+
+msgid "Memconservative"
+msgstr "小闪存模式"
+
+msgid "Standard"
+msgstr "标准模式"
+
+msgid "Enable GeoIP Dat"
+msgstr "启用 GeoIP Dat 版数据库"
+
+msgid "Replace GEOIP MMDB With GEOIP Dat, Large Size File, Need Download First"
+msgstr "使用 Geoip Dat 替换 GEOIP MMDB 数据库, 文件体积较大且无内置，启动后会自动下载"
+
+msgid "Auto Update GeoIP Dat"
+msgstr "自动更新 GeoIP Dat 数据库"
+
+msgid "Custom GeoIP Dat URL"
+msgstr "GeoIP Dat 数据库更新URL"
+
+msgid "Custom GeoIP Dat URL, Click Button Below To Refresh After Edit"
+msgstr "自定义 GeoIP Dat 数据库的更新来源，编辑后点击下方按钮生效"
+
+msgid "Update GeoIP Dat"
+msgstr "更新 GeoIP Dat 数据库"
