chore: add group policy Filter for meta core

--- a/luci-app-openclash/po/zh-cn/openclash.zh-cn.po
+++ b/luci-app-openclash/po/zh-cn/openclash.zh-cn.po
@@ -2905,3 +2905,6 @@ msgstr "（仅 Meta 内核）"
 
 msgid "Warning: Only Meta Core Support QUIC Type DNS, Skip"
 msgstr "警告：仅 Meta 内核支持 QUIC 类型的 DNS，跳过"
+
+msgid "Policy Filter"
+msgstr "节点筛选"
