--- a/luci-app-openclash/po/zh-cn/openclash.zh-cn.po
+++ b/luci-app-openclash/po/zh-cn/openclash.zh-cn.po
@@ -2906,17 +2906,23 @@ msgstr "警告：仅 Meta 内核支持 QUIC 类型的 DNS，跳过"
 msgid "Policy Filter"
 msgstr "节点筛选"
 
-msgid "Force Sniffing Domain Lists"
+msgid "Force Sniffing Domains Lists"
 msgstr "强制探测（嗅探）域名列表"
 
-msgid "Force Sniffing Domain Filter"
-msgstr "忽略探测（嗅探）域名列表"
+msgid "Force Sniffing domains(sni) Filter"
+msgstr "忽略探测（嗅探）域名（sni）列表"
+
+msgid "Force Sniffing Ports Filter"
+msgstr "忽略探测（嗅探）端口列表"
 
 msgid "Will Override Dns Queries If Domains in The List"
 msgstr "列表中的域名将会使用探测（嗅探）的结果进行连接"
 
-msgid "Will Disable Sniffing If Domains in The List"
-msgstr "列表中的域名将不会使用探测（嗅探）的结果进行连接"
+msgid "Will Disable Sniffing If Domains(sni) in The List"
+msgstr "列表中的域名（sni）将不会使用探测（嗅探）的结果进行连接"
+
+msgid "Will Disable Sniffing If Ports in The List"
+msgstr "列表中的端口将不会使用探测（嗅探）的结果进行连接"
 
 msgid "Custom Sniffer Settings"
 msgstr "自定义流量探测（嗅探）设置"
